--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1,7 +1,7 @@
 {
   "current": {
     "colors_solid_button_labels": "#ffffff",
-    "colors_accent_1": "#121212",
+    "colors_accent_1": "#8DB9CA",
     "gradient_accent_1": "",
     "colors_accent_2": "#334fb4",
     "gradient_accent_2": "",
@@ -103,8 +103,8 @@
           "announcement-bar-0": {
             "type": "announcement",
             "settings": {
-              "text": "Welcome to our store",
-              "color_scheme": "background-1",
+              "text": "FREE SHIPPING ON ALL U.S. ORDERS $49+",
+              "color_scheme": "accent-1",
               "link": ""
             }
           }
@@ -119,10 +119,10 @@
         "type": "header",
         "settings": {
           "color_scheme": "background-1",
-          "logo": "shopify:\/\/shop_images\/ESPRO_Logo_2x_ab728dec-89eb-4e37-908f-ede53bfb010f.jpg",
+          "logo": "shopify:\/\/shop_images\/ESPRO_Logo.png",
           "logo_width": 90,
           "logo_position": "middle-left",
-          "menu": "main-menu",
+          "menu": "espro-navbar",
           "show_line_separator": true,
           "enable_sticky_header": true,
           "margin_bottom": 0
